fixed some bugs and added own map controls with dark mode

--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,7 @@ html, body {
     position: fixed;
     top: 90px;
     left: 15px;
-    width: 30px;
+    width: 35px;
     z-index: 40000;
     display: flex;
     flex-direction: column;
@@ -72,16 +72,16 @@ html, body {
     margin-bottom: 15px;
 }
 #position-controls div {
-    width: 29px;
-    height: 29px;
+    width: 35px;
+    height: 35px;
     display: flex;
     justify-content: center;
     align-items: center;
     user-select: none;
 }
 #other-controls div {
-    width: 29px;
-    height: 29px;
+    width: 35px;
+    height: 35px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -443,7 +443,7 @@ nav {
 
 /* Save As */
 #save-img-select {
-    background-color: white;
+    background-color: var(--background);
     width: 80%;
     max-width: 800px;
     min-width: 500px;
@@ -453,6 +453,7 @@ nav {
     z-index: 20000001;
     border-radius: 50px;
     scrollbar-width: none;
+    color: var(--text-on-white)
 }
 #save-img-select li {
     display: flex;
@@ -468,22 +469,23 @@ nav {
     user-select: none;
 }
 #save-img-select input, #save-img-select select {
-    background-color: none;
+    background-color: var(--background);
     border-radius: 5px;
     font-family: "Heebo", sans-serif;
     border: none;
     padding: 0;
     font-size: 20px;
     height: 35px;
-    color: black;
+    color: var(--text-on-white);
     text-align: right;
+    padding-right: 5px;
 }
 
 #save-img-select input:focus, #save-img-select select:focus {
     border: none;
 }
 #save-img-select hr {
-    border: 1px solid rgb(0 0 0 / 50%);
+    border: 1px solid rgba(0, 0, 0, 0.5);
     margin: 0 50px 10px 50px;
 }
 #save-img-select ol {
@@ -687,6 +689,9 @@ nav {
     }
     .greyed-out {
         color: #31353A !important;
+    }
+    #save-img-select hr {
+        border: 1px solid #ffffff;
     }
 }
 
